tests/ui/generic-associated-types/parameter_number_and_kind.stderr
error[E0107]: associated type takes 1 lifetime argument but 2 lifetime arguments were supplied
  --> $DIR/parameter_number_and_kind.rs:11:24
   |
LL |     type FErr1 = Self::E<'static, 'static>;
   |                        ^          ------- help: remove this lifetime argument
   |                        |
   |                        expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/parameter_number_and_kind.rs:8:10
   |
LL |     type E<'a, T>;
   |          ^ --

error[E0107]: associated type takes 1 generic argument but 0 generic arguments were supplied
  --> $DIR/parameter_number_and_kind.rs:11:24
   |
LL |     type FErr1 = Self::E<'static, 'static>;
   |                        ^ expected 1 generic argument
   |
note: associated type defined here, with 1 generic parameter: `T`
  --> $DIR/parameter_number_and_kind.rs:8:10
   |
LL |     type E<'a, T>;
   |          ^     -
help: add missing generic argument
   |
LL |     type FErr1 = Self::E<'static, 'static, T>;
   |                                          +++

error[E0107]: associated type takes 1 generic argument but 2 generic arguments were supplied
  --> $DIR/parameter_number_and_kind.rs:14:27
   |
LL |     type FErr2<T> = Self::E<'static, T, u32>;
   |                           ^             --- help: remove this generic argument
   |                           |
   |                           expected 1 generic argument
   |
note: associated type defined here, with 1 generic parameter: `T`
  --> $DIR/parameter_number_and_kind.rs:8:10
   |
LL |     type E<'a, T>;
   |          ^     -

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0107`.
